// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectable matches snapshot 1`] = `
<div
  className="selectable selectable--selected selectable--left"
>
  <div>
    Component children
  </div>
</div>
`;

exports[`Selectable matches snapshot 2`] = `
<section
  className="my-cool-class selectable selectable--selected selectable--top"
>
  <div>
    Component children
  </div>
</section>
`;
